# evaluation_selection_hw_9

./: .gitignore  README.md  pyproject.toml
models/: model.joblib
src/forest_cover_pred/data_processing/: generate_eda_report.py  get_dataset.py  make_dataset.py
src/forest_cover_pred/models/: pipeline.py  train_model.py
