[tool.poetry]
name = "forest_cover_pred"
version = "0.1.0"
description = "Using cartographic variables predict forest cover type"
authors = ["egorherby <rukin.egor@gmail.com>"]

[tool.poetry.scripts]
train = "src.forest_cover_pred.models.train_model:train"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
sklearn = "^0.0"
mlflow = "^1.22.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "22.3.0"
mypy = "^0.910"
pytest = "^6.2.5"
pandas-profiling = "^3.2.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
